--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -19,10 +19,22 @@ h2 {
     height: auto;
     width: 1.5rem;
     margin: 0 10px;
+    cursor: pointer;
+    transition: .2s;
+}
+
+.icones svg:hover {
+    color: #ff357f;
 }
 
 .name-footer {
     color: var(--primary);
+    cursor: pointer;
+    transition: .2s;
+}
+
+.name-footer:hover {
+    color: #ff357f;
 }
 
 .socialMedia {
