--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -1,12 +1,12 @@
 nav {
     display: flex;
     width: 100%;
-    height: 7rem;
+    height: 120px;
     background-color: transparent;
     backdrop-filter: blur(2px);
     justify-content: space-between;
     align-items: center;
-    padding: 5rem;
+    padding: 2rem;
     position: fixed;
     z-index: 1;
     top: 0;
