--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -40,6 +40,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .download {
