--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -1,7 +1,7 @@
 nav {
     display: flex;
     width: 100%;
-    height: 120px;
+    height: auto;
     background-color: transparent;
     backdrop-filter: blur(2px);
     justify-content: space-between;
