--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -6,7 +6,7 @@ nav {
     backdrop-filter: blur(2px);
     justify-content: space-between;
     align-items: center;
-    padding: 1rem;
+    padding: 1rem 3rem;
     position: fixed;
     z-index: 1;
     top: 0;
